upgrade to java11, add javafx11 gui, add keyboard mapping